--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body,
 }
 
 nav.navbar-inverse {
-    color: antiquewhite
+    color: antiquewhite;
     background: rgba(0, 0, 0, 0.6);
     border: none;
 }
@@ -80,6 +80,7 @@ blockquote cite {
 #review h2 {
     display: inline-block;
     background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
 }
 
 #review .col-sm-4 {
@@ -87,6 +88,7 @@ blockquote cite {
     text-align: center;
     font-size: 20px;
     font-family: Georgia, Times, serif;
+    border-radius: 10px;
     
 }
 
